# libnexstar

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  configure.in  libnexstar.pc.in  nexstar.c  nexstar.h
examples/: Makefile  push_left.c
man/: libnexstar.man
src/: deg2str.c  deg2str.h  nex_open.c  nex_open.h  nexstar.c  nexstar.h  nexstar_pec.c  nexstar_pec.h
testcode/: Makefile  nexstarctl.c
